crates/models/src/validation/tests/snapshots/models__validation__tests__transform_source_not_found.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: collection testinG/Int-String, referenced by transform halveIntString, is not defined; did you mean testing/int-string defined at test://int-string#/collections/testing~1int-string?,
    },
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveSelf,
        error: collection wildly/off/name, referenced by transform halveSelf, is not defined,
    },
]
