crates/models/src/validation/tests/snapshots/models__validation__tests__unknown_locations.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string#/collections/testing~1int-string,
        error: location /unknown/key is unknown in schema test://int-string.schema,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/Unknown,
        error: location /unknown/projection is unknown in schema test://int-string.schema,
    },
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: location /unknown/key is unknown in schema test://int-string.schema,
    },
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: location /unknown/shuffle is unknown in schema test://int-string-len.schema,
    },
]
